Add link to users

--- a/EconomicManagementAPP/Views/Shared/_Layout.cshtml
+++ b/EconomicManagementAPP/Views/Shared/_Layout.cshtml
@@ -26,6 +26,10 @@
                             @*apuntamos al controller asp-controller="AccountTypes" y al view asp-action="Index"*@
                             <a class="nav-link text-dark" asp-area="" asp-controller="AccountTypes" asp-action="Index">Account Types</a>
                         </li>
+                        <li class="nav-item">
+                            @*apuntamos al controller asp-controller="AccountTypes" y al view asp-action="Index"*@
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Users</a>
+                        </li>
                     </ul>
                 </div>
             </div>
