--- a/EconomicManagementAPP/Views/Users/Index.cshtml
+++ b/EconomicManagementAPP/Views/Users/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Users</h1>
 
-<a asp-action="Create" class="btn btn-primary mb-3">Create account</a>
+<a asp-action="Create" class="btn btn-primary mb-3">Create user</a>
 
 
 <table class="table">
