--- a/EconomicManagementAPP/Views/Users/Delete.cshtml
+++ b/EconomicManagementAPP/Views/Users/Delete.cshtml
@@ -1,10 +1,10 @@
-﻿@model Users
+@model Users
 
 @{
     ViewData["Title"] = "Delete";
 }
 
-<h3 class="mb-3">¿Are you sure you want to delete the user?: @Model.Email?</h3>
+<h3 class="mb-3">¿Are you sure you want to delete this user?: @Model.Email?</h3>
 
 <form asp-action="DeleteUser">
     <input type="hidden" asp-for="Id" />
