--- a/EconomicManagementAPP/Views/Users/Modify.cshtml
+++ b/EconomicManagementAPP/Views/Users/Modify.cshtml
@@ -1,4 +1,3 @@
-﻿@model Users
 
 @{
     ViewData["Title"] = "Modify User";
@@ -6,23 +5,24 @@
 
 <h1>Modify user: @Model.Email</h1>
 
+@{
+    ViewData["Title"] = "Modify User account";
+}
+
+<h1>Modify User account: @Model.Email</h1>
 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
 <form asp-action="Modify">
     <input type="hidden" asp-for="Id" />
     <div class="mb-3">
-        <label asp-for="Email" class="form-label"></label>
-        <input type="text" asp-for="Email" class="form-control" />
-        <span asp-validation-for="Email" class="text-danger"></span>
-    </div>
-        <div class="mb-3">
         <label asp-for="StandarEmail" class="form-label"></label>
         <input type="text" asp-for="StandarEmail" class="form-control" />
         <span asp-validation-for="StandarEmail" class="text-danger"></span>
     </div>
+
         <div class="mb-3">
         <label asp-for="Password" class="form-label"></label>
-        <input type="password" asp-for="Password" class="form-control" />
+        <input type="text" asp-for="Password" class="form-control" />
         <span asp-validation-for="Password" class="text-danger"></span>
     </div>
 
