Implement validate if model is empty in view index

--- a/EconomicManagementAPP/Views/Accounts/index.cshtml
+++ b/EconomicManagementAPP/Views/Accounts/index.cshtml
@@ -8,7 +8,7 @@
 <a asp-action="Create" class="btn btn-primary mb-3">Create user</a>
 
 
-@if(Model != null)
+@if(Model.Any())
 {
     <table class="table">
   <thead>
@@ -46,6 +46,9 @@
   </tbody>
 
 </table>
+}@if(!Model.Any()){
+    <h1>
+        No results
+    </h1>
 }
-
 
