--- a/EconomicManagementAPP/Views/Shared/_Layout.cshtml
+++ b/EconomicManagementAPP/Views/Shared/_Layout.cshtml
@@ -23,13 +23,26 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            @*apuntamos al controller asp-controller="AccountTypes" y al view asp-action="Index"*@
                             <a class="nav-link text-dark" asp-area="" asp-controller="AccountTypes" asp-action="Index">Account Types</a>
                         </li>
                         <li class="nav-item">
-                            @*apuntamos al controller asp-controller="Users" y al view asp-action="Index"*@
-                            @*apuntamos al controller asp-controller="AccountTypes" y al view asp-action="Index"*@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Users</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Accounts" asp-action="Index">Accounts</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="OperationTypes" asp-action="Index">Operation Types</a>
+                        </li>
+
+                        <li class="nav-item">
+                          <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Transactions" asp-action="Index">Transactions</a>
                         </li>
                     </ul>
                 </div>
