--- a/EconomicManagementAPP/Views/Transactions/Index.cshtml
+++ b/EconomicManagementAPP/Views/Transactions/Index.cshtml
@@ -9,6 +9,8 @@
 <a asp-action="Create" class="btn btn-primary mb-3">Create transactions</a>
 
 
+@if(Model.Any())
+{
 <table class="table">
   <thead>
     <tr>
@@ -45,4 +47,9 @@
   </tbody>
 
 </table>
+}@if(!Model.Any()){
+    <h1>
+        No results
+    </h1>
+}
 
