--- a/EconomicManagementAPP/Views/Transactions/Create.cshtml
+++ b/EconomicManagementAPP/Views/Transactions/Create.cshtml
@@ -8,6 +8,7 @@
 <div asp-validation-summary=ModelOnly class="text-danger"></div>
 
 <form asp-action="Create">
+  </div>
     <div class="mb-3">
         <label asp-for="Total" class="form-label"></label>
         <input type="number" asp-for="Total" class="form-control" />
