Implement ifs for informated if model is empty

--- a/EconomicManagementAPP/Views/AccountTypes/Index.cshtml
+++ b/EconomicManagementAPP/Views/AccountTypes/Index.cshtml
@@ -8,6 +8,7 @@
 
 <a asp-action="Create" class="btn btn-primary mb-3">Create account</a>
 
+@if(Model.Any()){
 <table class="table">
     <thead>
         <tr>
@@ -32,3 +33,8 @@
         }
     </tbody>
 </table>
+}@if(!Model.Any()){
+    <h1>
+        No results
+    </h1>
+}
