--- a/EconomicManagementAPP/Views/Categories/Index.cshtml
+++ b/EconomicManagementAPP/Views/Categories/Index.cshtml
@@ -8,7 +8,7 @@
 
 <a asp-action="Create" class="btn btn-primary mb-3">Create category</a>
 
-
+@if(Model.Any()){
 <table class="table">
   <thead>
     <tr>
@@ -37,4 +37,8 @@
   </tbody>
 
 </table>
-
+}@if(!Model.Any()){
+    <h1>
+        No results
+    </h1>
+}
