--- a/EconomicManagementAPP/Views/Users/Index.cshtml
+++ b/EconomicManagementAPP/Views/Users/Index.cshtml
@@ -8,7 +8,7 @@
 
 <a asp-action="Create" class="btn btn-primary mb-3">Create user</a>
 
-
+@if(Model.Any()){
 <table class="table">
   <thead>
     <tr>
@@ -35,6 +35,9 @@
             </tr>
     }
   </tbody>
-
 </table>
-
+}@if(!Model.Any()){
+    <h1>
+        No results
+    </h1>
+}
