--- a/EconomicManagementAPP/Views/Categories/Create.cshtml
+++ b/EconomicManagementAPP/Views/Categories/Create.cshtml
@@ -1,4 +1,4 @@
-@model Categories
+@model CategorieTypeOperationViewModel
 @{
     ViewData["Title"] = "Categories";
 }
@@ -11,6 +11,15 @@
     <div class="mb-3">
         <label asp-for="Name" class="form-label"></label>
         <input type="text" asp-for="Name" class="form-control" />
+    </div>
+    <div class="mb-3">
+        <label asp-for="OperationTypeId" class="form-label"></label>
+        <select asp-for="OperationTypeId" asp-items="Model.OperationType" class="form-select"></select>
+
+    </div>
+    <div class="mb-3">
+        <label asp-for="UserId" class="form-label"></label>
+        <input type="text" asp-for="UserId" class="form-control" />
     </div>
     <button type="submit" class="btn btn-primary">Create</button>
     <a class="btn btn-secondary" asp-action="Index">Cancel</a>
