--- a/EconomicManagementAPP/Views/Categories/Index.cshtml
+++ b/EconomicManagementAPP/Views/Categories/Index.cshtml
@@ -10,16 +10,17 @@
 
 
 <table class="table">
-  <thead>
-    <tr>
-      <th>Actions</th>
-      <th>Id</th>
-      <th>Name</th>
-    </tr>
-  </thead>
-  <tbody id="reordenable">
-    @foreach (var category in Model)
-    {
+    <thead>
+        <tr>
+            <th>Actions</th>
+            <th>Name</th>
+            <th>Operation Type</th>
+            <th>User ID</th>
+        </tr>
+    </thead>
+    <tbody id="reordenable">
+        @foreach (var category in Model)
+        {
             <tr>
                 <td>
                     <input type="hidden" value="@category.Id" class="ids" />
@@ -27,14 +28,16 @@
                     <a class="btn btn-danger" asp-action="Delete" asp-route-id="@category.Id">Delete</a>
                 </td>
                 <td>
-                    @category.Id
+                    @category.Name
                 </td>
                 <td>
-                  @category.Name
+                    @category.OperationTypeId
                 </td>
+                <td>
+                    @category.UserId
             </tr>
-    }
-  </tbody>
+        }
+    </tbody>
 
 </table>
 
