Transaction Create View add

--- a/EconomicManagementAPP/Views/Shared/_Layout.cshtml
+++ b/EconomicManagementAPP/Views/Shared/_Layout.cshtml
@@ -33,9 +33,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Accounts" asp-action="Index">Accounts</a>
                         </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="OperationTypes" asp-action="Index">Operation Types</a>
-                        </li>
+                        <!-- <li class="nav-item"> -->
+                        <!--     <a class="nav-link text-dark" asp-area="" asp-controller="OperationTypes" asp-action="Index">Operation Types</a> -->
+                        <!-- </li> -->
 
                         <li class="nav-item">
                           <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
