Create Transaction View and Tests add

--- a/EconomicManagementAPP/Views/Transactions/Create.cshtml
+++ b/EconomicManagementAPP/Views/Transactions/Create.cshtml
@@ -42,7 +42,7 @@
   <div class="mb-3">
         <label asp-for="Description" class="form-label"></label>
         <textarea asp-for="Description" class="form-control"></textarea>
-        <span asp-validation-for="Total" class="text-danger"></span>
+        <span asp-validation-for="Description" class="text-danger"></span>
     </div>
 
     <button type="submit" class="btn btn-primary">Create</button>
