--- a/EconomicManagementAPP/Views/Categories/Modify.cshtml
+++ b/EconomicManagementAPP/Views/Categories/Modify.cshtml
@@ -5,17 +5,22 @@
 }
 
 <h1>Modify category: @Model.Name</h1>
-<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+<h5>Categories help us see what we spend our money on, also where our income comes from.</h5>
 
 <form asp-action="Modify">
-    <input type="hidden" asp-for="Id" />
+  <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+  <input type="hidden" asp-for="Id" />
     <div class="mb-3">
         <label asp-for="Name" class="form-label"></label>
-        <input type="text" asp-for="Name" class="form-control" />
+        <input asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
-
-    <button type="submit" class="btn btn-primary">Modify</button>
+    <div class="mb-3">
+        <label asp-for="OperationTypeId" class="form-label"></label>
+        <select asp-for="OperationTypeId" asp-items="Html.GetEnumSelectList<OperationTypes>()" class="form-select"></select>
+        <span asp-validation-for="OperationTypeId" class="text-danger"></span>
+    </div>
+    <button type="submit" class="btn btn-primary">Create</button>
     <a class="btn btn-secondary" asp-action="Index">Cancel</a>
 </form>
 
