Fix: Create Accounts balance validation fix

--- a/EconomicManagementAPP/Views/Accounts/Create.cshtml
+++ b/EconomicManagementAPP/Views/Accounts/Create.cshtml
@@ -16,11 +16,11 @@
         <span asp-validation-for="AccountTypeId" class="text-danger"> </span>
 
         <label asp-for="Balance" class="form-label"></label>
-        <input type="number" asp-for="Balance" class="form-control" />
+        <input asp-for="Balance" class="form-control" />
         <span asp-validation-for="Balance" class="text-danger"> </span>
 
         <label asp-for="Description" class="form-label"></label>
-        <input type="text" asp-for="Description" class="form-control" />
+        <input asp-for="Description" class="form-control" />
         <span asp-validation-for="Description" class="text-danger"> </span>
     </div>
     <button type="submit" class="btn btn-primary">Create</button>
