Change value in index of accounts

--- a/EconomicManagementAPP/Views/Accounts/Index.cshtml
+++ b/EconomicManagementAPP/Views/Accounts/Index.cshtml
@@ -5,7 +5,7 @@
 
 <h1>Accounts</h1>
 
-<a asp-action="Create" class="btn btn-primary mb-3">Create user</a>
+<a asp-action="Create" class="btn btn-primary mb-3">Create account</a>
 
 
 @if(Model.Any())
