--- a/EconomicManagementAPP/Views/Shared/_Layout.cshtml
+++ b/EconomicManagementAPP/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/EconomicManagementAPP.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/sortable_custom.css" asp-append-version="true">
 </head>
 <body>
     <header>
@@ -58,6 +59,7 @@
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/jquery-ui/jquery-ui.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
